# orchestra-planner

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  business_rules.md  docker-compose.yaml  fixes.md  next_steps.md  readme.md  todo.md
backend/: docker-compose.yaml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: app_factory.py  main.py
backend/src/adapters/api/: __init__.py  deps.py
backend/src/adapters/db/: __init__.py  repositories.py
backend/src/adapters/services/: __init__.py  basic_services.py  email_notification_service.py  fernet_encryption_service.py  jwt_token_service.py  openai_llm_service.py  smtp_email_service.py
backend/src/application/project_management/: __init__.py  create_role.py
backend/src/application/use_cases/: __init__.py
backend/src/config/: settings.py
backend/src/domain/: __init__.py  business_rules.py  time.py
backend/src/domain/entities/: __init__.py  calendar.py  project.py  project_config.py  project_invite.py  project_member.py  role.py  seniority_level.py  task.py  task_dependency.py  task_log.py  user.py  working_calendar.py  workload.py
backend/src/domain/errors/: __init__.py  auth.py  base.py  invite.py  llm.py  notification.py  project.py  task.py  workload.py
backend/src/domain/ports/: __init__.py  (+1 more)
backend/src/infrastructure/: di.py
backend/src/observability/: logging_config.py  logging_context.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_auth_project_task_flow.py
backend/tests/integration/: conftest.py
(+155 files in other folders)
