[project]
name = "orchestra-planner"
version = "0.1.0"
description = "Orchestra Planner backend"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "structlog>=23.1,<24",
  "PyJWT>=2.8",
  "cryptography>=41.0",
  "aiosmtplib>=3.0",
  "openai>=1.10",
  "httpx>=0.27",
  "redis>=5.0",
  "email-validator>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
